Update NN Homework 4.ipynb

--- a/NN Homework 4.ipynb
+++ b/NN Homework 4.ipynb
@@ -19,8 +19,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Itay Chabra - 208292458  \n",
-        "Neta Ben Mordechai - 211451901"
+        "Itay Chabra\n",
+        "Neta Ben Mordechai"
       ],
       "metadata": {
         "id": "EzeOmDgpjB21"
