--- a/ML Homework 2.ipynb
+++ b/ML Homework 2.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# **Titanik: Machine Learning from Disaster**\n",
     "\n",
-    "Name: Neta Ben Mordechai ID: 211451901  \n",
-    "Name: Itay Chabra ID: 208292458\n",
+    "Name: Neta Ben Mordechai  \n",
+    "Name: Itay Chabra\n",
     "\n",
     "Link to Kaggle: https://www.kaggle.com/netabenmordechai \n",
     "\n",
